Refactor SearchUpdatedEventHandler
- More precise error messages, better error handling
- Returned list of Distribution Service is never null, so don't rely on
  that for error handling
- Use sync methods of distibutionservice instead of job barrier
- That removes dependency on serviceregistry
- Remove private methods, include in main method for better readability
  & error handling